# aws-proxy

./: .gitignore  ARCHITECTURE.md  CONTEXT.md  Dockerfile  README.md  build.sh  nginx-lua.conf  nginx.conf  pyproject.toml  test-proxy.sh
aws_proxy/: http.py  keystore.py  main.py  middleware.py  parse.py
goproxy/: .env.sh  Dockerfile  Makefile  build-generate-cert.sh  generate-certificate.sh  go.mod  go.sum  lambda-layer.sh  test-proxy.sh  test-remote.sh
goproxy/cmd/aws-proxy/: main.go
goproxy/cmd/generate-cert/: main.go
goproxy/pkg/cert/: cert.go  storage.go
goproxy/pkg/policy/: policy.go  policy_test.go
goproxy/pkg/proxy/: proxy.go
pyproxy/: pyproxy.py
test_lambda/: README.md  assume_roles.sh  run_lambda.sh  template.yaml
test_lambda/src/: app.py  test.py
tests/: test.sh  test_aws_calls.py  test_parse.py
